dom/ipc/TabChild.h
@@ -620,7 +620,6 @@ public:
     return mParentIsActive;
   }
 
-  const mozilla::layers::CompositorOptions& GetCompositorOptions() const;
   bool AsyncPanZoomEnabled() const;
 
   virtual ScreenIntSize GetInnerSize() override;
